Update project logos, footer, and banner overlays
- Use background logos for project detail pages
- Update footer logo size and attribution link
- Darken banner overlays on about and services pages
- Simplify gallery grid component
- Add image compression scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "compress-images": "node scripts/compress-images.js"
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
